--- a/ArjunaJTS/idl/jacorb/pom.xml
+++ b/ArjunaJTS/idl/jacorb/pom.xml
@@ -47,7 +47,7 @@
           <dependency>
             <groupId>org.jacorb</groupId>
             <artifactId>jacorb-idl-compiler</artifactId>
-            <version>2.2.3</version>
+            <version>${version.org.jacorb.jacorb-idl-compiler}</version>
           </dependency>
         </dependencies>
         <executions>
