--- a/XTS/byteman_support/pom.xml
+++ b/XTS/byteman_support/pom.xml
@@ -32,10 +32,12 @@
         <dependency>
             <groupId>org.jboss.byteman</groupId>
             <artifactId>byteman</artifactId>
+            <version>${version.org.jboss.byteman}</version>
         </dependency>
         <dependency>
             <groupId>org.jboss.byteman</groupId>
             <artifactId>byteman-submit</artifactId>
+            <version>${version.org.jboss.byteman}</version>
         </dependency>
     </dependencies>
     <profiles>
