--- a/common/pom.xml
+++ b/common/pom.xml
@@ -55,16 +55,18 @@
     <dependency>
       <groupId>org.jboss.byteman</groupId>
       <artifactId>byteman</artifactId>
+      <version>${version.org.jboss.byteman}</version>
     </dependency>
     <dependency>
       <groupId>org.jboss.byteman</groupId>
       <artifactId>byteman-submit</artifactId>
+      <version>${version.org.jboss.byteman}</version>
     </dependency>
     <!-- START TEST -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.8.1</version>
+      <version>${version.junit}</version>
       <scope>test</scope>
     </dependency>
     <!-- END TEST -->
