--- a/rest-tx/tx/pom.xml
+++ b/rest-tx/tx/pom.xml
@@ -28,7 +28,6 @@
   <name>RESTful API for Atomic Transactions</name>
   <description>Provides Transactions for web applications</description>
   <properties>
-    <version.org.jboss.resteasy>2.0.0.GA</version.org.jboss.resteasy>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.build.timestamp.format>yyyyMMdd'T'HHmmss</maven.build.timestamp.format>
     <javaee6.with.tools.version>1.0.0.M7</javaee6.with.tools.version>
@@ -56,17 +55,6 @@
     <!-- end Jersey -->
   </repositories>
 
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>org.jboss.bom</groupId>
-        <artifactId>jboss-javaee-6.0-with-tools</artifactId>
-        <version>${javaee6.with.tools.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
   <dependencies>
     <dependency>
       <groupId>org.jboss.narayana.rts</groupId>
@@ -76,7 +64,7 @@
     <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
-      <version>1.2.15</version>
+      <version>${version.log4j}</version>
       <exclusions>
         <exclusion>
           <groupId>com.sun.jmx</groupId>
@@ -99,38 +87,39 @@
     <dependency>
       <groupId>org.jboss.spec.javax.servlet</groupId>
       <artifactId>jboss-servlet-api_3.0_spec</artifactId>
-      <version>1.0.0.Final</version>
+      <version>${version.org.jboss.spec.javax.servlet}</version>
       <scope>provided</scope>
     </dependency>
     <!-- Jersey -->
     <dependency>
       <groupId>asm</groupId>
       <artifactId>asm-all</artifactId>
-      <version>3.1</version>
+      <version>${version.asm}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.sun.jersey</groupId>
       <artifactId>jersey-server</artifactId>
-      <version>1.5</version>
+      <version>${version.com.sun.jersey}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.sun.jersey.jersey-test-framework</groupId>
       <artifactId>jersey-test-framework-grizzly</artifactId>
-      <version>1.5</version>
+      <version>${version.com.sun.jersey}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.sun.grizzly</groupId>
       <artifactId>grizzly-servlet-webserver</artifactId>
-      <version>1.9.18-i</version>
+      <version>${version.com.sun.grizzly}</version>
       <scope>test</scope>
     </dependency>
     <!-- end Jersey -->
     <dependency>
       <groupId>org.jboss.narayana.jta</groupId>
       <artifactId>narayana-jta</artifactId>
+      <version>${project.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
@@ -171,6 +160,7 @@
     <dependency>
       <groupId>commons-httpclient</groupId>
       <artifactId>commons-httpclient</artifactId>
+      <version>${version.commons-httpclient}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
@@ -182,12 +172,13 @@
     <dependency>
       <groupId>org.jboss.logging</groupId>
       <artifactId>jboss-logging</artifactId>
+      <version>${version.org.jboss.logging.jboss-logging}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
-      <version>1.3.168</version>
+      <version>${version.com.h2database}</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
