--- a/txframework/pom.xml
+++ b/txframework/pom.xml
@@ -57,61 +57,54 @@
         </plugins>
     </build>
 
-    <dependencyManagement>
-        <dependencies>
-            <!-- Define the version of JBoss' Java EE 6 APIs we want to import. Any
-                   dependencies from org.jboss.spec will have their version defined by this
-                   BOM -->
-            <!-- JBoss distributes a complete set of Java EE 6 APIs including a Bill
-                   of Materials (BOM). A BOM specifies the versions of a "stack" (or a collection)
-                   of artifacts. We use this here so that we always get the correct versions
-                   of artifacts. Here we use the jboss-javaee-web-6.0 stack (you can read this
-                   as the JBoss stack of the Java EE Web Profile 6 APIs), and we use version
-                   2.0.0.Beta1 which is the latest release of the stack. You can actually use
-                   this stack with any version of JBoss AS that implements Java EE 6, not just
-                   JBoss AS 7! -->
-            <dependency>
-                <groupId>org.jboss.spec</groupId>
-                <artifactId>jboss-javaee-all-6.0</artifactId>
-                <type>pom</type>
-                <scope>import</scope>
-                <version>3.0.1.Final</version>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
-
     <dependencies>
         <!-- Import the CDI API, we use provided scope as the API is included in
      JBoss AS 7 -->
-      <dependency>
-          <groupId>org.jboss.ws</groupId>
-          <artifactId>jbossws-api</artifactId>
-          <scope>provided</scope>
+        <dependency>
+            <groupId>org.jboss.ws</groupId>
+            <artifactId>jbossws-api</artifactId>
+            <version>${version.org.jboss.ws}</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>javax.enterprise</groupId>
             <artifactId>cdi-api</artifactId>
+            <version>${version.javax.enterprise}</version>
             <scope>provided</scope>
+            <exclusions>
+                <exclusion>
+                    <artifactId>jboss-interceptor-api</artifactId>
+                    <groupId>org.jboss.interceptor</groupId>
+                </exclusion>
+                <exclusion>
+                    <artifactId>jsr250-api</artifactId>
+                    <groupId>javax.annotation</groupId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <!-- Import the qualifiers annotations -->
         <dependency>
             <groupId>javax.inject</groupId>
             <artifactId>javax.inject</artifactId>
+            <version>${version.javax.inject}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
+            <version>${version.junit}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.jboss.arquillian.junit</groupId>
             <artifactId>arquillian-junit-container</artifactId>
+            <version>${version.org.jboss.arquillian.core}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.jboss.narayana</groupId>
             <artifactId>jbosstxbridge</artifactId>
+            <version>${project.version}</version>
             <scope>provided</scope>
             <exclusions>
                 <exclusion>
@@ -123,6 +116,7 @@
         <dependency>
             <groupId>org.jboss.narayana.xts</groupId>
             <artifactId>jbossxts</artifactId>
+            <version>${project.version}</version>
             <classifier>api</classifier>
             <scope>provided</scope>
             <exclusions>
@@ -135,33 +129,40 @@
         <dependency>
             <groupId>org.jboss.narayana.xts</groupId>
             <artifactId>byteman_support</artifactId>
+            <version>${project.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.jboss.narayana.rts</groupId>
             <artifactId>restat-util</artifactId>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate.javax.persistence</groupId>
             <artifactId>hibernate-jpa-2.0-api</artifactId>
+            <version>${version.org.hibernate.javax.persistence}</version>
         </dependency>
         <dependency>
             <groupId>org.jboss.spec.javax.ejb</groupId>
             <artifactId>jboss-ejb-api_3.1_spec</artifactId>
+            <version>${version.org.jboss.spec.javax.ejb}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-jaxrs</artifactId>
+            <version>${version.org.jboss.resteasy}</version>
         </dependency>
         <dependency>
             <groupId>org.jboss.arquillian.protocol</groupId>
             <artifactId>arquillian-protocol-servlet</artifactId>
+            <version>${version.org.jboss.arquillian.core}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.jboss.weld</groupId>
             <artifactId>weld-core</artifactId>
+            <version>${version.org.jboss.weld}</version>
         </dependency>
     </dependencies>
 
