JBTM-1622 StackOverflowError when loading org.jboss.ws.common:main module

--- a/XTS/localjunit/pom.xml
+++ b/XTS/localjunit/pom.xml
@@ -129,7 +129,7 @@
                                 <!--
                                   Used in arquillian.xml
                                 -->
-                                <server.jvm.args>${jvm.args.memory} ${ipv4.server.jvm.args}</server.jvm.args>
+                                <server.jvm.args>${jvm.args.other} ${jvm.args.memory} ${ipv4.server.jvm.args}</server.jvm.args>
                                 <node.address>127.0.0.1</node.address>
                             </systemPropertyVariables>
                             <skip>false</skip>
@@ -162,7 +162,7 @@
                                 <!--
                                   Used in arquillian.xml
                                 -->
-                                <server.jvm.args>${jvm.args.memory} ${jvm.args.byteman} ${ipv4.server.jvm.args}
+                                <server.jvm.args>${jvm.args.other} ${jvm.args.memory} ${jvm.args.byteman} ${ipv4.server.jvm.args}
                                 </server.jvm.args>
                                 <node.address>127.0.0.1</node.address>
                             </systemPropertyVariables>
@@ -197,7 +197,7 @@
                                 <!--
                                   Used in arquillian.xml
                                 -->
-                                <server.jvm.args>${jvm.args.memory} ${jvm.args.byteman} ${ipv6.server.jvm.args}
+                                <server.jvm.args>${jvm.args.other} ${jvm.args.memory} ${jvm.args.byteman} ${ipv6.server.jvm.args}
                                 </server.jvm.args>
                                 <node.address>[::1]</node.address>
                             </systemPropertyVariables>
