JBTM-1407. Build option to build jts only with jacorb or both orbs

--- a/ArjunaJTS/idl/pom.xml
+++ b/ArjunaJTS/idl/pom.xml
@@ -47,6 +47,20 @@
 
   <modules>
     <module>jacorb</module>
-    <module>idlj</module>
   </modules>
+  
+  <profiles>
+    <profile>
+      <id>jts-idlj</id>
+      <activation>
+        <property>
+          <name>idlj-enabled</name>
+          <value>true</value>
+        </property>
+      </activation>
+      <modules>
+        <module>idlj</module>
+      </modules>
+    </profile>
+  </profiles>
 </project>
