--- a/ArjunaJTS/orbportability/pom.xml
+++ b/ArjunaJTS/orbportability/pom.xml
@@ -87,44 +87,6 @@
                 </classpathDependencyExcludes>
               </configuration>
             </execution>
-            <execution>
-              <!-- test against the Sun ORB stubs (determined by what we exclude from the classpath) -->
-              <id>surefire-idlj</id>
-              <phase>test</phase>
-              <goals>
-                <goal>test</goal>
-              </goals>
-              <configuration>
-                <skip>false</skip>
-                <systemProperties combine.children="append"/>
-                <excludes>
-                  <!-- exclude tests which we don't want to run -->
-                  <exclude>**/common/**</exclude>
-                  <exclude>**/initialisation/postinit/**</exclude>
-                  <exclude>**/initialisation/postset/**</exclude>
-                  <exclude>**/initialisation/preinit/**</exclude>
-                  <exclude>**/initialisation/TestAttributeCallback.java</exclude>
-                  <exclude>**/SimpleObjectImpl.java</exclude>
-                  <exclude>**/TestAttributeCallback.java</exclude>
-                  <exclude>**/PrePostTestCallback.java</exclude>
-                  <!-- these ones need fixing -->
-                  <exclude>**/PropertyInitTest.java</exclude>
-                  <exclude>**/PropertyInitTest3.java</exclude>
-                </excludes>
-                <reportsDirectory>${project.build.directory}/idlj-surefire-reports</reportsDirectory>
-                  <classpathDependencyExcludes>
-                    <classpathDependencyExcludes>org.jboss.narayana.jts:jacorb-idl</classpathDependencyExcludes>
-                    <classpathDependencyExcludes>org.jboss.narayana.jts:jacorb-idl:test-jar</classpathDependencyExcludes>
-                  </classpathDependencyExcludes>
-
-                  <systemPropertyVariables combine.children="append">
-                    <OrbPortabilityEnvironmentBean.orbImpleClassName>com.arjuna.orbportability.internal.orbspecific.javaidl.orb.implementations.javaidl_1_4</OrbPortabilityEnvironmentBean.orbImpleClassName>
-                    <OrbPortabilityEnvironmentBean.poaImpleClassName>com.arjuna.orbportability.internal.orbspecific.javaidl.oa.implementations.javaidl_1_4</OrbPortabilityEnvironmentBean.poaImpleClassName>
-                    <OrbPortabilityEnvironmentBean.orbDataClassName>com.arjuna.orbportability.internal.orbspecific.versions.javaidl_1_4</OrbPortabilityEnvironmentBean.orbDataClassName>
-                  </systemPropertyVariables>
-
-              </configuration>
-            </execution>
           </executions>
       </plugin>
     </plugins>
@@ -151,16 +113,6 @@
     <dependency>
       <groupId>org.jboss.narayana.jts</groupId>
       <artifactId>jacorb-idl</artifactId>
-      <type>test-jar</type>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.jboss.narayana.jts</groupId>
-      <artifactId>idlj-idl</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.jboss.narayana.jts</groupId>
-      <artifactId>idlj-idl</artifactId>
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
@@ -208,4 +160,76 @@
             <scope>test</scope>
         </dependency>
   </dependencies>
+  
+  <profiles>
+    <profile>
+      <id>jts-idlj</id>
+      <activation>
+        <property>
+          <name>idlj-enabled</name>
+          <value>true</value>
+        </property>
+      </activation>
+      
+      <dependencies>
+        <dependency>
+          <groupId>org.jboss.narayana.jts</groupId>
+          <artifactId>idlj-idl</artifactId>
+        </dependency>
+        <dependency>
+          <groupId>org.jboss.narayana.jts</groupId>
+          <artifactId>idlj-idl</artifactId>
+          <type>test-jar</type>
+          <scope>test</scope>
+        </dependency>
+      </dependencies>
+      
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>surefire-idlj</id>
+                <phase>test</phase>
+                <goals>
+                  <goal>test</goal>
+                </goals>
+                <configuration>
+                  <skip>false</skip>
+                  <systemProperties combine.children="append" />
+                  <excludes>
+                    <!-- exclude tests which we don't want to run -->
+                    <exclude>**/common/**</exclude>
+                    <exclude>**/initialisation/postinit/**</exclude>
+                    <exclude>**/initialisation/postset/**</exclude>
+                    <exclude>**/initialisation/preinit/**</exclude>
+                    <exclude>**/initialisation/TestAttributeCallback.java</exclude>
+                    <exclude>**/SimpleObjectImpl.java</exclude>
+                    <exclude>**/TestAttributeCallback.java</exclude>
+                    <exclude>**/PrePostTestCallback.java</exclude>
+                    <!-- these ones need fixing -->
+                    <exclude>**/PropertyInitTest.java</exclude>
+                    <exclude>**/PropertyInitTest3.java</exclude>
+                  </excludes>
+                  <reportsDirectory>${project.build.directory}/idlj-surefire-reports</reportsDirectory>
+                  <classpathDependencyExcludes>
+                    <classpathDependencyExcludes>org.jboss.narayana.jts:jacorb-idl</classpathDependencyExcludes>
+                    <classpathDependencyExcludes>org.jboss.narayana.jts:jacorb-idl:test-jar</classpathDependencyExcludes>
+                  </classpathDependencyExcludes>
+                  <systemPropertyVariables
+                    combine.children="append">
+                    <OrbPortabilityEnvironmentBean.orbImpleClassName>com.arjuna.orbportability.internal.orbspecific.javaidl.orb.implementations.javaidl_1_4</OrbPortabilityEnvironmentBean.orbImpleClassName>
+                    <OrbPortabilityEnvironmentBean.poaImpleClassName>com.arjuna.orbportability.internal.orbspecific.javaidl.oa.implementations.javaidl_1_4</OrbPortabilityEnvironmentBean.poaImpleClassName>
+                    <OrbPortabilityEnvironmentBean.orbDataClassName>com.arjuna.orbportability.internal.orbspecific.versions.javaidl_1_4</OrbPortabilityEnvironmentBean.orbDataClassName>
+                  </systemPropertyVariables>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+  </profiles>
 </project>
