--- a/ArjunaJTS/pom.xml
+++ b/ArjunaJTS/pom.xml
@@ -42,10 +42,21 @@
     <module>jts</module>
     <module>jtax</module>
     <module>narayana-jts-jacorb</module>
-    <module>narayana-jts-idlj</module>
     <module>integration</module>
   </modules>
   <profiles>
+      <profile>
+        <id>jts-idlj</id>
+        <activation>
+            <property>
+              <name>idlj-enabled</name>
+              <value>true</value>
+            </property>
+        </activation>
+        <modules>
+          <module>narayana-jts-idlj</module>
+        </modules>
+      </profile>
       <profile>
           <id>release</id>
           <build>
